# turbo.fish

./: Cargo.toml  README.md
src/: turbofish.rs
static/: turbofish.css
templates/: turbofish.tera
