[package]
authors = ["Jonas Platte <jplatte+git@posteo.de>", "Kaidan <fishstacks@protonmail.com>"]
name = "turbofish"
version = "0.1.1"
license = "AGPL-3.0+"
name = "turbofish"
repository = "https://github.com/imnotbad/turbo.fish"

[dependencies]
rand = "0.3.17"
rocket = "0.3.3"
rocket_codegen = "0.3.3"

[dependencies.rocket_contrib]
version = "0.3.3"
features = ["tera_templates"]
